force-app/main/default/objects/New_Sale_Approval_Mock__c/New_Sale_Approval_Mock__c.object-meta.xml
<CustomObject>
    <label>New Sale Approval (Downtime Record)</label>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>New Sale Approval Mock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Sale Approval (Downtime Records)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>