force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Address5__c.field-meta.xml
<CustomField>
    <fullName>Address5__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>