force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Applicant_Email_Id2__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email_Id2__c</fullName>
    <label>Applicant Email Id</label>
    <type>Email</type>
</CustomField>