force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Applicant_Mobile_Number1__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mobile_Number1__c</fullName>
    <label>Applicant Mobile Number</label>
    <type>Phone</type>
</CustomField>