force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Applicant_Name4__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name4__c</fullName>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>