force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/BF_Created_date_and_created_By__c.field-meta.xml
<CustomField>
    <fullName>BF_Created_date_and_created_By__c</fullName>
    <formula>Booking__r.CreatedBy.FirstName &amp;&quot; &quot; &amp; Booking__r.CreatedBy.LastName &amp;&quot; &quot;&amp; Text(Booking__r.CreatedDate)</formula>
    <label>BF Created date and created By</label>
    <type>Text</type>
</CustomField>