force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>NewSaleApprovals1</relationshipName>
    <type>Lookup</type>
</CustomField>