force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Cancel_Rebook__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Rebook__c</fullName>
    <label>Cancel &amp; Rebook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>