force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <label>Client Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>