force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/CSO_Chief_Sales_Officer__c.field-meta.xml
<CustomField>
    <fullName>CSO_Chief_Sales_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO (Chief Sales Officer)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Sale_Approvals14</relationshipName>
    <type>Lookup</type>
</CustomField>