force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Declared_Date__c.field-meta.xml
<CustomField>
    <fullName>Declared_Date__c</fullName>
    <description>to be entered by MIS team</description>
    <label>Declared Date</label>
    <type>Date</type>
</CustomField>