force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/DLD_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>DLD_Amount_2__c</fullName>
    <label>DLD Amount 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>