force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/DLD_Amount__c.field-meta.xml
<CustomField>
    <fullName>DLD_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DLD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>