force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Nationality1__c.field-meta.xml
<CustomField>
    <fullName>Nationality1__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afghans</fullName>
                <label>Afghan</label>
            </value>
            <value>
                <fullName>Albanians</fullName>
                <label>Albanian</label>
            </value>
            <value>
                <fullName>Algerians</fullName>
                <label>Algerian</label>
            </value>
            <value>
                <fullName>Americans</fullName>
                <label>American</label>
            </value>
            <value>
                <fullName>Andorrans</fullName>
                <label>Andorran</label>
            </value>
            <value>
                <fullName>Angolans</fullName>
                <label>Angolan</label>
            </value>
            <value>
                <fullName>Antiguans and Barbudans</fullName>
                <label>Antiguans and Barbudan</label>
            </value>
            <value>
                <fullName>Argentines</fullName>
            </value>
            <value>
                <fullName>Armenians</fullName>
                <label>Armenian</label>
            </value>
            <value>
                <fullName>Arubans</fullName>
                <label>Aruban</label>
            </value>
            <value>
                <fullName>Australians</fullName>
                <label>Australian</label>
            </value>
            <value>
                <fullName>Austrians</fullName>
                <label>Austrian</label>
            </value>
            <value>
                <fullName>Azerbaijanis</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>Bahamians</fullName>
                <label>Bahamian</label>
            </value>
            <value>
                <fullName>Bahrainis</fullName>
                <label>Bahraini</label>
            </value>
            <value>
                <fullName>Bangladeshis</fullName>
                <label>Bangladeshi</label>
            </value>
            <value>
                <fullName>Barbadians</fullName>
                <label>Barbadian</label>
            </value>
            <value>
                <fullName>Basques</fullName>
            </value>
            <value>
                <fullName>Belarusians</fullName>
                <label>Belarusian</label>
            </value>
            <value>
                <fullName>Belgians</fullName>
                <label>Belgian</label>
            </value>
            <value>
                <fullName>Belizeans</fullName>
                <label>Belizean</label>
            </value>
            <value>
                <fullName>Beninese</fullName>
            </value>
            <value>
                <fullName>Bermudians</fullName>
                <label>Bermudian</label>
            </value>
            <value>
                <fullName>Bhutanese</fullName>
            </value>
            <value>
                <fullName>Bolivians</fullName>
                <label>Bolivian</label>
            </value>
            <value>
                <fullName>Bosniaks</fullName>
                <label>Bosniak</label>
            </value>
            <value>
                <fullName>Bosnians and Herzegovinians</fullName>
                <label>Bosnians and Herzegovinian</label>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brazilians</fullName>
                <label>Brazilian</label>
            </value>
            <value>
                <fullName>Bretons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>