force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afghans</fullName>
            </value>
            <value>
                <fullName>Albanians</fullName>
            </value>
            <value>
                <fullName>Algerians</fullName>
            </value>
            <value>
                <fullName>Americans</fullName>
            </value>
            <value>
                <fullName>Andorrans</fullName>
            </value>
            <value>
                <fullName>Angolans</fullName>
            </value>
            <value>
                <fullName>Antiguans and Barbudans</fullName>
            </value>
            <value>
                <fullName>Argentines</fullName>
            </value>
            <value>
                <fullName>Armenians</fullName>
            </value>
            <value>
                <fullName>Arubans</fullName>
            </value>
            <value>
                <fullName>Australians</fullName>
            </value>
            <value>
                <fullName>Austrians</fullName>
            </value>
            <value>
                <fullName>Azerbaijanis</fullName>
            </value>
            <value>
                <fullName>Bahamians</fullName>
            </value>
            <value>
                <fullName>Bahrainis</fullName>
            </value>
            <value>
                <fullName>Bangladeshis</fullName>
            </value>
            <value>
                <fullName>Barbadians</fullName>
            </value>
            <value>
                <fullName>Basques</fullName>
            </value>
            <value>
                <fullName>Belarusians</fullName>
            </value>
            <value>
                <fullName>Belgians</fullName>
            </value>
            <value>
                <fullName>Belizeans</fullName>
            </value>
            <value>
                <fullName>Beninese</fullName>
            </value>
            <value>
                <fullName>Bermudians</fullName>
            </value>
            <value>
                <fullName>Bhutanese</fullName>
            </value>
            <value>
                <fullName>Bolivians</fullName>
            </value>
            <value>
                <fullName>Bosniaks</fullName>
            </value>
            <value>
                <fullName>Bosnians and Herzegovinians</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brazilians</fullName>
            </value>
            <value>
                <fullName>Bretons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>