force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/New_Sale_Verification_by_SO__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Verification_by_SO__c</fullName>
    <label>New Sale Verification by SO</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clash/Dispute</fullName>
            </value>
            <value>
                <fullName>Missing Documents</fullName>
            </value>
            <value>
                <fullName>Missing Approval</fullName>
            </value>
            <value>
                <fullName>New Sales Verified</fullName>
            </value>
            <value>
                <fullName>Pending for verification</fullName>
                <default>true</default>
                <label>Pending for verification</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>