force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Old_Unit_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit_Booking_Date__c</fullName>
    <label>Old Unit Booking Date</label>
    <type>Date</type>
</CustomField>