force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Old_Unit_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit_Project_Name__c</fullName>
    <label>Old Unit Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aflux</fullName>
            </value>
            <value>
                <fullName>Creek Vista Tower A</fullName>
            </value>
            <value>
                <fullName>Creek Vista Tower B</fullName>
            </value>
            <value>
                <fullName>Greens Phase I - Building 1</fullName>
            </value>
            <value>
                <fullName>Greens Phase I - Building 4</fullName>
            </value>
            <value>
                <fullName>Greens Phase II - Building 2</fullName>
            </value>
            <value>
                <fullName>Greens Phase II - Building 3</fullName>
            </value>
            <value>
                <fullName>Greens Phase III - Building 5</fullName>
            </value>
            <value>
                <fullName>Greens Phase III - Building 6</fullName>
            </value>
            <value>
                <fullName>Hartland Extension Hartland Extension</fullName>
            </value>
            <value>
                <fullName>One Park Avenue One Park Avenue Tower</fullName>
            </value>
            <value>
                <fullName>Sobha Creek vistas Reserve SCVR - A</fullName>
            </value>
            <value>
                <fullName>Sobha Creek vistas Reserve SCVR - B</fullName>
            </value>
            <value>
                <fullName>Sobha Tranquility Sobha Tranquility</fullName>
            </value>
            <value>
                <fullName>The Crest A</fullName>
            </value>
            <value>
                <fullName>The Crest B</fullName>
            </value>
            <value>
                <fullName>The Crest C</fullName>
            </value>
            <value>
                <fullName>The Crest D</fullName>
            </value>
            <value>
                <fullName>The Crest Retail</fullName>
            </value>
            <value>
                <fullName>The S The S</fullName>
            </value>
            <value>
                <fullName>Townhouses Townhouse</fullName>
            </value>
            <value>
                <fullName>Villas Phase I</fullName>
            </value>
            <value>
                <fullName>Villas Phase II</fullName>
            </value>
            <value>
                <fullName>Villas Phase III</fullName>
            </value>
            <value>
                <fullName>Waterside Plots Waterside Plots</fullName>
            </value>
            <value>
                <fullName>Waves Grande Waves Grande</fullName>
            </value>
            <value>
                <fullName>Waves Waves</fullName>
            </value>
            <value>
                <fullName>Sobha One Sobha One Tower A</fullName>
            </value>
            <value>
                <fullName>Sobha One Sobha One Tower B</fullName>
            </value>
            <value>
                <fullName>Sobha One Sobha One Tower C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>