force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Paid_on_the_existing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Paid_on_the_existing_Unit__c</fullName>
    <label>Paid % on the existing Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>