force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://ceptessobha.atlassian.net/browse/SOB-133</description>
    <label>Payment Request</label>
    <referenceTo>Payment_Request_Mock__c</referenceTo>
    <relationshipName>New_Sale_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>