force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/Residential_Status1__c.field-meta.xml
<CustomField>
    <fullName>Residential_Status1__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE Resident</fullName>
            </value>
            <value>
                <fullName>Non – UAE Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>