force-app/main/default/objects/New_Sale_Approval_Mock__c/fields/SalesOps_Comments__c.field-meta.xml
<CustomField>
    <fullName>SalesOps_Comments__c</fullName>
    <label>SalesOps Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>