force-app/main/default/objects/New_Sale_Approval_Mock__c/listViews/New_Sale_Verification_by_SO.listView-meta.xml
<ListView>
    <fullName>New_Sale_Verification_by_SO</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>New_Sale_Verification_by_SO__c</columns>
    <columns>Sales_Head_VP__c</columns>
    <columns>Booking_Form_To_be_Created_By__c</columns>
    <columns>Payment_Request__c</columns>
    <columns>Unit__c</columns>
    <columns>DLD_Amount__c</columns>
    <columns>DP_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Rejected,Rejected by Sales VP,Rejected by Sales Ops,Rejected by Sales Head</value>
    </filters>
    <filters>
        <field>New_Sale_Verification_by_SO__c</field>
        <operation>notEqual</operation>
        <value>New Sales Verified</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/11/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>New_Sale_Verification_by_SO__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </filters>
    <label>New Sale Verification by SO</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Sales_Operations_Executive</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>