force-app/main/default/objects/New_Sale_Approval_Mock__c/listViews/NSA_Queue_unit_hold_request.listView-meta.xml
<ListView>
    <fullName>NSA_Queue_unit_hold_request</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>NSA Queue</label>
    <queue>NSA_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>